Spring/Error/MyBranch/src/main/java/com/example/branch/model/domain/User.java
package com.example.branch.model.domain;

import java.util.List;

/**
 * @author: mengchen
 * Create by 18-4-22
 */
public class User {
    private String id;

    private String username;

    private String password;

    private String email;

    private List<String> roles;


    public String getId() {
        return id;
    }

    public void setId(String id) {
        this.id = id;
    }

    public String getUsername() {
        return username;
    }

    public void setUsername(String username) {
        this.username = username;
    }

    public String getPassword() {
        return password;
    }

    public void setPassword(String password) {
        this.password = password;
    }

    public String getEmail() {
        return email;
    }

    public void setEmail(String email) {
        this.email = email;
    }

    public List<String> getRoles() {
        return roles;
    }

    public void setRoles(List<String> roles) {
        this.roles = roles;
    }
}
